# d2l-neu

./: .gitattributes  .gitignore  CLAUDE.md  EFFICIENCY_PLANS.md  HANDOFF_gpu_recapture.md  MAIN_CURRICULUM_ADDITIONS.md  MATH_APPENDIX_CURRICULUM_ADDITIONS.md  Makefile  PLAN-launch-buttons.md  PLAN-slides-and-notebook-editing.md  README.md  REVIEW_ch2-5.md  REVIEW_math_appendix.md  TF_COVERAGE_PLAN.md  TOOLS_APPENDIX_REWRITE_PLAN.md  _d2l-icons.html  _d2l-icons.js  _d2l-layout.html  _d2l-mobilenav.html  _d2l-notebooks.html  _d2l-slides-overlay.html  _d2l-slides.scss  _d2l-style.css  _d2l-tabs.html  _d2l-theme.scss  _quarto.yml  _svg-to-pdf.lua  architecture.md  attention_feedback.md  bootstrap.sh  build.sh  config.ini  convergence-and-speed.md  convergence-issues.md  coverage.md  d2l-user-feedback.md  d2l.bib  deep-scan-rest.md  deep-scan.md  deepdive.md  (+11 more)
.playwright-mcp/: page-2026-06-13T21-52-39-709Z.yml  page-2026-06-13T21-55-20-839Z.yml
.vscode-extension/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
chapter_advanced/: index.md
chapter_appendix-mathematics-for-deep-learning/: distributions.md  distributions.qmd  eigendecomposition.md  eigendecomposition.qmd  geometry-linear-algebraic-ops.md  geometry-linear-algebraic-ops.qmd  index.qmd  information-theory.md  information-theory.qmd  integral-calculus.md  integral-calculus.qmd  maximum-likelihood.md  maximum-likelihood.qmd  multivariable-calculus.md  multivariable-calculus.qmd  naive-bayes.md  naive-bayes.qmd  random-variables.md  random-variables.qmd  single-variable-calculus.md  single-variable-calculus.qmd  statistics.md  statistics.qmd
chapter_appendix-tools-for-deep-learning/: aws.md  aws.qmd  cloud-instances.md  colab.md  colab.qmd  contributing.md  contributing.qmd  d2l.md  d2l.qmd  developers-guide.md  hardware.md  hosted-notebooks.md  index.md  index.qmd  interactive-development.md  jupyter.md  jupyter.qmd  model-serving.md  sagemaker.md  sagemaker.qmd  selecting-servers-gpus.md  selecting-servers-gpus.qmd  software-ecosystem.md  training-systems.md  utils.md  utils.qmd
chapter_attention/: attention-at-scale.md  attention-scoring.md  index.md  multihead-attention.md  positional-information.md  queries-keys-values.md  what-attention-computes.md
chapter_attention-mechanisms-and-transformers/: attention-pooling.md  attention-pooling.qmd  attention-scoring-functions.md  attention-scoring-functions.qmd  bahdanau-attention.md  bahdanau-attention.qmd  index.md  index.qmd  large-pretraining-transformers.md  large-pretraining-transformers.qmd  multihead-attention.md  multihead-attention.qmd  queries-keys-values.md  queries-keys-values.qmd  self-attention-and-positional-encoding.md  self-attention-and-positional-encoding.qmd  transformer.md  transformer.qmd  vision-transformer.md  vision-transformer.qmd
chapter_attic/: index.md
chapter_basics/: index.md
chapter_builders-guide/: custom-layer.md  custom-layer.qmd  custom-layers.md  gpus-devices-memory.md  index.md  index.qmd  init-param.md  init-param.qmd  init.md  lazy-init.md  lazy-init.qmd  model-construction.md  model-construction.qmd  numerics.md  parameters-state-memory.md  parameters.md  parameters.qmd  read-write.md  read-write.qmd  reproducibility-inspection.md  saving-loading.md  use-gpu.md  use-gpu.qmd
chapter_builders-guide-v2/: custom-layers.md  gpus-devices-memory.md  index.md  init.md  model-construction.md  numerics.md  parameters-state-memory.md  reproducibility-inspection.md  saving-loading.md
chapter_computational-performance/: async-computation.md  async-computation.qmd  auto-parallelism.md  auto-parallelism.qmd  compilation.md  fast-transformer.md  hardware.md  hardware.qmd  hybridize.md  hybridize.qmd  index.md  index.qmd  legacy-multigpu-lib.md  memory-precision.md  multi-gpu-practice.md  multiple-gpus-concise.md  multiple-gpus-concise.qmd  multiple-gpus.md  multiple-gpus.qmd  parameterserver.md  parameterserver.qmd  performance-model.md
chapter_computer-vision/: anchor.md  anchor.qmd  bounding-box.md  bounding-box.qmd  fcn.md  fcn.qmd  fine-tuning.md  fine-tuning.qmd  image-augmentation.md  image-augmentation.qmd  index.md  index.qmd  kaggle-cifar10.md  kaggle-cifar10.qmd  kaggle-dog.md  kaggle-dog.qmd  multiscale-object-detection.md  multiscale-object-detection.qmd  neural-style.md  neural-style.qmd  object-detection-dataset.md  object-detection-dataset.qmd  rcnn.md  rcnn.qmd  semantic-segmentation-and-dataset.md  semantic-segmentation-and-dataset.qmd  ssd.md  ssd.qmd  transposed-conv.md  transposed-conv.qmd
chapter_convolutional-modern/: alexnet.md  alexnet.qmd  batch-norm.md  batch-norm.qmd  blocks.md  cnn-design.md  cnn-design.qmd  convnext.md  densenet.md  densenet.qmd  efficient-convnets.md  googlenet.md  googlenet.qmd  index.md  index.qmd  nin.md  nin.qmd  resnet.md  resnet.qmd  training-recipes.md  vgg.md  vgg.qmd
chapter_convolutional-neural-networks/: channels.md  channels.qmd  conv-layer.md  conv-layer.qmd  index.md  index.qmd  lenet.md  lenet.qmd  padding-and-strides.md  padding-and-strides.qmd  pooling.md  pooling.qmd  why-conv.md  why-conv.qmd
chapter_diffusion-models/: index.md
chapter_gaussian-processes/: gp-inference.md  gp-inference.qmd  gp-intro.md  gp-intro.qmd  gp-priors.md  gp-priors.qmd  index.md  index.qmd
chapter_generative-adversarial-networks/: dcgan.md  dcgan.qmd  gan.md  gan.qmd  index.qmd
chapter_hyperparameter-optimization/: hyperopt-api.md  hyperopt-api.qmd  hyperopt-intro.md  hyperopt-intro.qmd  index.md  index.qmd  rs-async.md  rs-async.qmd  sh-async.md  sh-async.qmd  sh-intro.md  sh-intro.qmd
chapter_image-models/: index.md
chapter_installation/: index.md  index.qmd
chapter_introduction/: index.md  index.qmd
chapter_language-models/: index.md
chapter_linear-classification/: classification.md  classification.qmd  environment-and-distribution-shift.md  environment-and-distribution-shift.qmd  generalization-classification.md  generalization-classification.qmd  image-classification-dataset.md  image-classification-dataset.qmd  index.md  index.qmd  (+6 more)
(+1804 files in other folders)
