[project]
name = "d2l"
version = "1.0.3"
description = "Dive into Deep Learning"
license = "MIT-0"
requires-python = ">=3.11"
authors = [{ name = "D2L Developers", email = "d2l.devs@gmail.com" }]

dependencies = [
    "numpy",
    "matplotlib",
    "matplotlib-inline",
    "requests",
    "pandas",
    "scipy",
    "pillow",
    "ipython",
]

[project.optional-dependencies]
pytorch = [
    "torch",
    "torchvision",
    "gymnasium[toy-text]",
    "gpytorch",
    "syne-tune[gpsearchers]",
]
mxnet = [
    "mxnet-cu117>=1.9.1,<2",
    "numpy<1.24",
    "nvidia-cudnn-cu11<9",
    "nvidia-nccl-cu11",
    "nvidia-cublas-cu11",
    "nvidia-cuda-runtime-cu11",
    "nvidia-cuda-nvrtc-cu11",
    "nvidia-cusolver-cu11",
    "nvidia-cusparse-cu11",
    "nvidia-cufft-cu11",
    "nvidia-curand-cu11",
    "nvidia-nvtx-cu11",
]
tensorflow = [
    # `[and-cuda]` is what pulls Blackwell-capable CUDA libs (nccl>=2.27.7,
    # cudnn>=9.3, etc.). Without it, uv resolves nccl to 2.21.5, which has
    # no sm_120 kernels — every collective aborts with "unhandled cuda error".
    "tensorflow[and-cuda]",
    "tensorflow-datasets",
    "tensorflow-probability[tf]",
]
jax = [
    "jax[cuda12]>=0.10.0",
    "flax",
    "optax",
    "tensorflow",
    "tensorflow-datasets",
    "flaxmodels",
]
run = [
    "jupyter",
    "nbconvert",
    "ipykernel",
]
# Build extra: tools needed to render HTML/PDF from .qmd sources.
# `quarto-cli` installs the Quarto CLI into the venv's bin/.
build = [
    "quarto-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["d2l"]

[tool.uv]
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]
conflicts = [[{ extra = "pytorch" }, { extra = "jax" }, { extra = "mxnet" }, { extra = "tensorflow" }]]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[dependency-groups]
dev = [
    "pyarrow>=23.0.1",
]
