[project]
name = "d2l"
version = "1.0.3"
description = "Dive into Deep Learning"
license = "MIT-0"
requires-python = ">=3.12,<3.13"
authors = [{ name = "D2L Developers", email = "d2l.devs@gmail.com" }]

dependencies = [
    "numpy",
    "matplotlib",
    "matplotlib-inline",
    "requests",
    "pandas",
    "scipy",
    "pillow",
    "ipython",
]

[project.optional-dependencies]
pytorch = [
    "torch",
    "torchvision",
    "gymnasium[toy-text]",
    "gpytorch",
    "syne-tune[gpsearchers]",
]
mxnet = [
    # Custom MXNet 2.0 wheel built against CUDA 13 with Blackwell (sm_120) SASS.
    # Upstream MXNet 1.9.1 / cu117 has no Blackwell kernels and no PTX fallback.
    # The wheel is cp312-only; constrain via marker so resolution succeeds on
    # other supported Python versions too. One-off pin to a locally-built wheel
    # because the GitHub `release-wheel` action for tag v2.0.0+cu13.bw.20260522
    # failed; run `tools/update_mxnet_wheel.py` once the release is published
    # to switch back to the URL pin.
    "mxnet @ file:///home/smola/mxnet/dist/mxnet-2.0.0%2Bcu13.bw.20260523.10-cp312-cp312-linux_x86_64.whl ; python_version == '3.12'",
]
tensorflow = [
    # `[and-cuda]` is what pulls Blackwell-capable CUDA libs (nccl>=2.27.7,
    # cudnn>=9.3, etc.). Without it, uv resolves nccl to 2.21.5, which has
    # no sm_120 kernels — every collective aborts with "unhandled cuda error".
    "tensorflow[and-cuda]",
    "tensorflow-datasets",
    "tensorflow-probability[tf]",
]
jax = [
    "jax[cuda12]>=0.10.0",
    "flax",
    "optax",
    "tensorflow",
    "tensorflow-datasets",
    "flaxmodels",
]
run = [
    "jupyter",
    "nbconvert",
    "ipykernel",
]
# Build extra: tools needed to render HTML/PDF from .qmd sources.
# `quarto-cli` installs the Quarto CLI into the venv's bin/.
build = [
    "quarto-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["d2l"]

[tool.hatch.metadata]
# Required so the mxnet extra can point at a custom-built wheel via direct URL.
allow-direct-references = true

[tool.uv]
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]
conflicts = [[{ extra = "pytorch" }, { extra = "jax" }, { extra = "mxnet" }, { extra = "tensorflow" }]]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[dependency-groups]
dev = [
    "pyarrow>=23.0.1",
]
